jilles      2006/06/18 00:38:10 UTC	(20060618-5402)
  Log:
  Make last used time for channels more accurate
  (update it in expire_check more often, and on
  part/quit). Show it in /cs info if more than
  a day ago.
  

  Changes:	Modified:
  +7 -0		trunk/modules/chanserv/info.c (File Modified) 
  +3 -0		trunk/modules/chanserv/main.c (File Modified) 
  +6 -1		trunk/src/node.c (File Modified) 
  +3 -0		trunk/src/services.c (File Modified) 


jilles      2006/06/18 00:01:56 UTC	(20060618-5400)
  Log:
  chanserv count contrib module:
  make this work better in the flags world
  show 'other' for entries not in any xOP list
  show counts for each flag also
  

  Changes:	Modified:
  +22 -2	trunk/contrib/cs_count.c (File Modified) 
  +6 -2		trunk/help/cservice/count (File Modified) 


jilles      2006/06/17 23:09:35 UTC	(20060617-5398)
  Log:
  Don't clear key, limit and non-standard simple modes if
  the requester is on channel (they can do it themselves).
  

  Changes:	Modified:
  +28 -25	trunk/modules/chanserv/recover.c (File Modified) 


jilles      2006/06/17 22:47:00 UTC	(20060617-5396)
  Log:
  ChanServ RECOVER: Unset non-standard simple modes with
  parameter, such as join throttling. This should really
  only unset modes that could keep people out but it
  does not.
  

  Changes:	Modified:
  +14 -0	trunk/modules/chanserv/recover.c (File Modified) 


jilles      2006/06/17 12:56:36 UTC	(20060617-5394)
  Log:
  Clarify that local operators (in some ircds) are not
  IRCops from atheme's point of view.
  

  Changes:	Modified:
  +3 -0		trunk/doc/PRIVILEGES (File Modified) 


w00t        2006/06/17 07:28:37 UTC	(20060617-5392)
  Log:
  Not all AKILLs on inspircd should be permanent.

  Changes:	Modified:
  +1 -1		trunk/protocol/inspircd.c (File Modified) 


w00t        2006/06/17 04:50:19 UTC	(20060617-5390)
  Log:
  - Remove OS KLINE -- it's only been deprecated since 0.2 or so.

  Changes:	Modified:
  +2 -5		trunk/modules/operserv/akill.c (File Modified) 

